net: dsa: qca8k: fix MTU calculation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7254,6 +7254,7 @@
 	patches.suse/iavf-Fix-deadlock-occurrence-during-resetting-VF-int.patch
 	patches.suse/iavf-Fix-refreshing-iavf-adapter-stats-on-ethtool-re.patch
 	patches.suse/iavf-Fix-VLAN-feature-flags-after-VFR.patch
+	patches.suse/net-dsa-qca8k-fix-MTU-calculation.patch
 	patches.suse/nfp-checking-parameter-process-for-rx-usecs-tx-usecs.patch
 	patches.suse/net-stmmac-retain-PTP-clock-time-during-SIOCSHWTSTAM.patch
 	patches.suse/net-smc-Avoid-warning-of-possible-recursive-locking
