net: mscc: ocelot: create a function that replaces an existing VCAP filter (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7285,6 +7285,7 @@
 	patches.suse/net-hns3-fix-one-incorrect-value-of-page-pool-info-w.patch
 	patches.suse/net-hns3-fix-incorrect-components-info-of-ethtool-re.patch
 	patches.suse/net-mscc-ocelot-don-t-downgrade-timestamping-RX-filt.patch
+	patches.suse/net-mscc-ocelot-create-a-function-that-replaces-an-e.patch
 	patches.suse/net-ptp-add-a-definition-for-the-UDP-port-for-IEEE-1.patch
 	patches.suse/net-dsa-microchip-implement-multi-bridge-support.patch
 	patches.suse/erofs-fix-deadlock-when-shrink-erofs-slab.patch
