--- a/series.conf
+++ b/series.conf
@@ -7287,6 +7287,7 @@
 	patches.suse/net-mscc-ocelot-don-t-downgrade-timestamping-RX-filt.patch
 	patches.suse/net-mscc-ocelot-create-a-function-that-replaces-an-e.patch
 	patches.suse/net-ptp-add-a-definition-for-the-UDP-port-for-IEEE-1.patch
+	patches.suse/net-mscc-ocelot-set-up-traps-for-PTP-packets.patch
 	patches.suse/net-dsa-microchip-implement-multi-bridge-support.patch
 	patches.suse/erofs-fix-deadlock-when-shrink-erofs-slab.patch
 	patches.suse/NFSv42-Don-t-fail-clone-unless-the-OP_CLONE-operatio.patch
