--- a/series.conf
+++ b/series.conf
@@ -7419,6 +7419,7 @@
 	patches.suse/ibmvnic-drop-bad-optimization-in-reuse_tx_pools.patch
 	patches.suse/net-smc-Keep-smc_close_final-rc-during-active-close
 	patches.suse/selftests-net-Correct-case-name.patch
+	patches.suse/net-dsa-b53-Add-SPI-ID-table.patch
 	patches.suse/drm-msm-a6xx-Allocate-enough-space-for-GMU-registers.patch
 	patches.suse/drm-msm-dsi-set-default-num_data_lanes.patch
 	patches.suse/drm-msm-dp-Avoid-unpowered-AUX-xfers-that-caused-cra.patch
