--- a/blacklist.conf
+++ b/blacklist.conf
@@ -361,3 +361,4 @@ c5e58c4545a69677d078b4c813b5d10d3481be9c # ALSA: not applicable for SLE15-SP4, t
 cfd3a9be0ac423be41afcc7a07d708056bf097a8 # selftest:vm: reverting the above
 504627ee4cf4a2d42cba7ce156d423299c06a618 # net: wwan: already applied
 d68c2e1d19c540464ad12a8a11bdd88eedcaf3dc # octeontx2-nicvf:: a76053707dbf is not applied 
+d8d83d8ab0a453e17e68b3a3bed1f940c34b8646 # lib/crypto: blake2s: breakes KABI
