--- a/series.conf
+++ b/series.conf
@@ -7528,6 +7528,7 @@
 	patches.suse/i40e-Fix-pre-set-max-number-of-queues-for-VF.patch
 	patches.suse/i40e-Fix-NULL-pointer-dereference-in-i40e_dbg_dump_d.patch
 	patches.suse/net-fec-only-clear-interrupt-of-handling-queue-in-fe.patch
+	patches.suse/net-dsa-mv88e6xxx-fix-don-t-use-PHY_DETECT-on-intern.patch
 	patches.suse/bpf-x86-Fix-no-previous-prototype-warning.patch
 	patches.suse/Documentation-locking-locktypes-Update-migrate_disab.patch
 	patches.suse/bpf-Make-sure-bpf_disable_instrumentation-is-safe-vs.patch
