--- a/series.conf
+++ b/series.conf
@@ -7539,6 +7539,7 @@
 	patches.suse/ice-fix-choosing-UDP-header-type.patch
 	patches.suse/ice-fix-adding-different-tunnels.patch
 	patches.suse/ice-safer-stats-processing.patch
+	patches.suse/vrf-don-t-run-conntrack-on-vrf-with-dflt-qdisc.patch
 	patches.suse/vmxnet3-fix-minimum-vectors-alloc-issue.patch
 	patches.suse/net-mvpp2-fix-XDP-rx-queues-registering.patch
 	patches.suse/can-kvaser_pciefd-kvaser_pciefd_rx_error_frame-incre.patch
