--- a/series.conf
+++ b/series.conf
@@ -7549,6 +7549,7 @@
 	patches.suse/nfc-fix-potential-NULL-pointer-deref-in-nfc_genl_dum.patch
 	patches.suse/nfp-Fix-memory-leak-in-nfp_cpp_area_cache_add.patch
 	patches.suse/msft-hv-2484-net-mana-Fix-memory-leak-in-mana_hwc_create_wq.patch
+	patches.suse/net-dsa-felix-Fix-memory-leak-in-felix_setup_mmio_fi.patch
 	patches.suse/net-dsa-mv88e6xxx-allow-use-of-PHYs-on-CPU-and-DSA-p.patch
 	patches.suse/RDMA-Fix-use-after-free-in-rxe_queue_cleanup.patch
 	patches.suse/RDMA-mlx5-Fix-releasing-unallocated-memory-in-dereg-.patch
