--- a/series.conf
+++ b/series.conf
@@ -7835,6 +7835,7 @@
 	patches.suse/ALSA-rawmidi-fix-the-uninitalized-user_pversion.patch
 	patches.suse/ALSA-hda-realtek-Fix-quirk-for-Clevo-NJ51CU.patch
 	patches.suse/net-marvell-prestera-fix-incorrect-return-of-port_fi.patch
+	patches.suse/net-marvell-prestera-fix-incorrect-structure-access.patch
 	patches.suse/tun-avoid-double-free-in-tun_free_netdev.patch
 	patches.suse/ice-xsk-return-xsk-buffers-back-to-pool-when-cleanin.patch
 	patches.suse/ice-xsk-allocate-separate-memory-for-XDP-SW-ring.patch
