net: mscc: ocelot: don't dereference NULL pointers with shared tc filters (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9089,6 +9089,7 @@
 	patches.suse/bcmgenet-add-WOL-IRQ-check.patch
 	patches.suse/net-usb-Correct-reset-handling-of-smsc95xx.patch
 	patches.suse/lib82596-Fix-IRQ-check-in-sni_82596_probe.patch
+	patches.suse/net-mscc-ocelot-don-t-dereference-NULL-pointers-with.patch
 	patches.suse/net-ethernet-mtk_eth_soc-fix-error-checking-in-mtk_m.patch
 	patches.suse/net-phy-marvell-add-Marvell-specific-PHY-loopback.patch
 	patches.suse/net-smc-Remove-unused-function-declaration
