--- a/series.conf
+++ b/series.conf
@@ -8229,6 +8229,7 @@
 	patches.suse/devlink-Add-enable_iwarp-generic-device-param.patch
 	patches.suse/net-ice-Add-support-for-enable_iwarp-and-enable_roce.patch
 	patches.suse/RDMA-irdma-Set-protocol-based-on-PF-rdma_mode-flag.patch
+	patches.suse/net-dsa-ocelot-seville-utilize-of_mdiobus_register.patch
 	patches.suse/net-stmmac-Add-platform-level-debug-register-dump-fe.patch
 	patches.suse/igc-AF_XDP-zero-copy-metadata-adjust-breaks-SKBs-on-.patch
 	patches.suse/net-ice-Fix-boolean-assignment.patch
