net: dsa: seville: register the mdiobus under devres (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9504,6 +9504,7 @@
 	patches.suse/net-dsa-ar9331-register-the-mdiobus-under-devres.patch
 	patches.suse/net-dsa-bcm_sf2-don-t-use-devres-for-mdiobus.patch
 	patches.suse/net-dsa-felix-don-t-use-devres-for-mdiobus.patch
+	patches.suse/net-dsa-seville-register-the-mdiobus-under-devres.patch
 	patches.suse/net-dsa-mt7530-fix-kernel-bug-in-mdiobus_free-when-u.patch
 	patches.suse/net-dsa-lantiq_gswip-don-t-use-devres-for-mdiobus.patch
 	patches.suse/ibmvnic-don-t-release-napi-in-__ibmvnic_open.patch
