scsi: sd: Revert "Rework asynchronous resume support" (rc1 testing).

--- a/series.conf
+++ b/series.conf
@@ -71,6 +71,8 @@
 	# to area specific sections below.
 	########################################################
 
+	patches.suse/0001-scsi-sd-Revert-Rework-asynchronous-resume-support.patch
+
 	########################################################
 	# kbuild/module infrastructure fixes
 	########################################################
