--- a/series.conf
+++ b/series.conf
@@ -54483,6 +54483,7 @@
 	patches.suse/tpm-add-request_locality-before-write-TPM_INT_ENABLE.patch
 	patches.suse/tpm-fix-potential-NULL-pointer-access-in-tpm_del_cha.patch
 	patches.suse/selinux-fix-potential-memleak-in-selinux_add_opt.patch
+	patches.suse/xfs-check-sb_meta_uuid-for-dabuf-buffer-recovery.patch
 	patches.suse/ext4-make-sure-quota-gets-properly-shutdown-on-error.patch
 	patches.suse/ext4-fix-an-use-after-free-issue-about-data-journal-.patch
 	patches.suse/ext4-Avoid-trim-error-on-fs-with-small-groups.patch
