blacklist.conf: cleanup with a risk of regressions

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -359,3 +359,4 @@ c5e58c4545a69677d078b4c813b5d10d3481be9c # ALSA: not applicable for SLE15-SP4, t
 0791309aa0eb2d39c116ff95bab120e53b0c8f94 # selftest:vm: reverting the above
 18d609daa546c919fd36b62a7b510c18de4b4af8 # selftest:vm: reverted in stable below
 cfd3a9be0ac423be41afcc7a07d708056bf097a8 # selftest:vm: reverting the above
+c51ba246cb172c9e947dc6fb8868a1eaf0b2a913 # cleanup with a risk of regressions
