supported.conf: mark mlxsw modules supported (jsc#SLE-23766)

--- a/supported.conf
+++ b/supported.conf
@@ -2783,7 +2783,7 @@
 		drivers/net/ethernet/mellanox/mlx5/core/mlx5_core		# Mellanox ConnectX-IB HCA core library
 		drivers/net/ethernet/mellanox/mlxbf_gige/mlxbf_gige
 		drivers/net/ethernet/mellanox/mlxfw/mlxfw
--		drivers/net/ethernet/mellanox/mlxsw/*
+		drivers/net/ethernet/mellanox/mlxsw/*
 -		drivers/net/ethernet/micrel/ks8842
 -		drivers/net/ethernet/micrel/ks8851_common
 -		drivers/net/ethernet/micrel/ks8851_par
