ipheth: fix EOVERFLOW in ipheth_rcvbulk_callback (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54773,6 +54773,7 @@
 	patches.suse/gve-fix-the-wrong-AdminQ-buffer-queue-index-check.patch
 	patches.suse/net-ieee802154-ca8210-Stop-leaking-skb-s.patch
 	patches.suse/net-sched-fix-use-after-free-in-tc_new_tfilter.patch
+	patches.suse/ipheth-fix-EOVERFLOW-in-ipheth_rcvbulk_callback.patch
 	patches.suse/net-mlx5e-Fix-handling-of-wrong-devices-during-bond-.patch
 	patches.suse/ax25-fix-reference-count-leaks-of-ax25_dev.patch
 	patches.suse/Fix-a-warning-about-a-malformed-kernel-doc-comment-in-cifs.patch
