--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1589,3 +1589,4 @@ a9e9b091a1c14ecd8bd9d3214a62142a1786fe30 # Missing dependency in mt7530.c. See p
 39e0f991a62ed5efabd20711a7b6e7da92603170 # Optimization. Breaks kABI
 96ca08c05838d1f5501003f0a6201824e4eede70 # Missing dependencies
 3550bba25d5587a701e6edf20e20984d2ee72c78 # Breaks kABI; No consumers of chip->of_gpio_ranges_fallback
+36a15e1cb134c0395261ba1940762703f778438c # later reverted in upstream
