--- a/series.conf
+++ b/series.conf
@@ -49025,6 +49025,7 @@
 	patches.suse/powerpc-prom-Fix-ibm-arch-vec-5-platform-support-sca.patch
 	patches.suse/powerpc-time-Enable-sched-clock-for-irqtime.patch
 	patches.suse/powerpc-Fix-build-error-in-paravirt.h.patch
+	patches.suse/KVM-PPC-Book3S-HV-Context-tracking-exit-guest-contex.patch
 	patches.suse/powerpc-add-interrupt_cond_local_irq_enable-helper.patch
 	patches.suse/powerpc-perf-Include-PMCs-as-part-of-per-cpu-cpuhw_e.patch
 	patches.suse/powerpc-perf-Expose-Performance-Monitor-Counter-SPR-.patch
