--- a/series.conf
+++ b/series.conf
@@ -43991,6 +43991,7 @@
 	patches.suse/USB-hub-Clean-up-use-of-port-initialization-schemes-.patch
 	patches.suse/USB-cdc-wdm-Make-wdm_flush-interruptible-and-add-wdm.patch
 	patches.suse/usb-dwc3-gadget-Resume-pending-requests-after-CLEAR_.patch
+	patches.suse/usb-dwc3-gadget-END_TRANSFER-before-CLEAR_STALL-comm.patch
 	patches.suse/usb-dwc3-simple-add-support-for-Hikey-970.patch
 	patches.suse/usb-dwc2-Fix-parameter-type-in-function-pointer-prot.patch
 	patches.suse/usb-dwc3-core-Properly-default-unspecified-speed.patch
