--- a/series.conf
+++ b/series.conf
@@ -7162,6 +7162,7 @@
 	patches.suse/ipc-WARN-if-trying-to-remove-ipc-object-which-is-abs.patch
 	patches.suse/shm-extend-forced-shm-destroy-to-support-objects-fro.patch
 	patches.suse/pstore-blk-Use-lu-to-format-unsigned-long.patch
+	patches.suse/KVM-PPC-Book3S-HV-Use-GLOBAL_TOC-for-kvmppc_h_set_da.patch
 	patches.suse/powerpc-pseries-ddw-Revert-Extend-upper-limit-for-hu.patch
 	patches.suse/powerpc-xive-Change-IRQ-domain-to-a-tree-domain.patch
 	patches.suse/perf-x86-intel-uncore-Fix-filter_tid-mask-for-CHA-events-on-Skylake-Server.patch
