--- a/series.conf
+++ b/series.conf
@@ -53959,6 +53959,7 @@
 	patches.suse/s390-kexec-fix-memory-leak-of-ipl-report-buffer
 	patches.suse/ACPI-Add-stubs-for-wakeup-handler-functions.patch
 	patches.suse/blk-cgroup-fix-missing-put-device-in-error-path-from.patch
+	patches.suse/KVM-PPC-Book3S-HV-Use-GLOBAL_TOC-for-kvmppc_h_set_da.patch
 	patches.suse/powerpc-pseries-ddw-Revert-Extend-upper-limit-for-hu.patch
 	patches.suse/hugetlbfs-flush-TLBs-correctly-after-huge_pmd_unshar.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-ASRock-NUC-Box-1100.patch
