--- a/series.conf
+++ b/series.conf
@@ -10940,6 +10940,7 @@
 	patches.suse/powerpc-fadump-register-for-fadump-as-early-as-possi.patch
 	patches.suse/powerpc-mm-numa-skip-NUMA_NO_NODE-onlining-in-parse_.patch
 	patches.suse/powerpc-lib-sstep-Fix-sthcx-instruction.patch
+	patches.suse/KVM-PPC-Fix-vmx-vsx-mixup-in-mmio-emulation.patch
 	patches.suse/powerpc-sysdev-fix-incorrect-use-to-determine-if-lis.patch
 	patches.suse/powerpc-64s-Don-t-use-DSISR-for-SLB-faults.patch
 	patches.suse/powerpc-pseries-Parse-control-memory-access-error.patch
