--- a/series.conf
+++ b/series.conf
@@ -55390,6 +55390,7 @@
 	patches.suse/powerpc-fadump-register-for-fadump-as-early-as-possi.patch
 	patches.suse/powerpc-mm-numa-skip-NUMA_NO_NODE-onlining-in-parse_.patch
 	patches.suse/powerpc-lib-sstep-Fix-sthcx-instruction.patch
+	patches.suse/KVM-PPC-Fix-vmx-vsx-mixup-in-mmio-emulation.patch
 	patches.suse/powerpc-sysdev-fix-incorrect-use-to-determine-if-lis.patch
 	patches.suse/powerpc-xive-fix-return-value-of-__setup-handler.patch
 	patches.suse/powerpc-tm-Fix-more-userspace-r13-corruption.patch
