KVM: PPC: Book3S HV: Prevent POWER7/8 TLB flush flushing SLB (bsc#1156395).

--- a/series.conf
+++ b/series.conf
@@ -54013,6 +54013,7 @@
 	patches.suse/net-sched-sch_ets-don-t-peek-at-classes-beyond-nband.patch
 	patches.suse/net-mscc-ocelot-don-t-downgrade-timestamping-RX-filt.patch
 	patches.suse/net-mscc-ocelot-correctly-report-the-timestamping-RX.patch
+	patches.suse/KVM-PPC-Book3S-HV-Prevent-POWER7-8-TLB-flush-flushin.patch
 	patches.suse/NFSv42-Don-t-fail-clone-unless-the-OP_CLONE-operatio.patch
 	patches.suse/NFSv42-Fix-pagecache-invalidation-after-COPY-CLONE.patch
 	patches.suse/scsi-qla2xxx-edif-Fix-off-by-one-bug-in-qla_edif_app.patch
