--- a/series.conf
+++ b/series.conf
@@ -12400,6 +12400,7 @@
 	patches.suse/powerpc-fadump-fix-PT_LOAD-segment-for-boot-memory-a.patch
 	patches.suse/powerpc-idle-Fix-return-value-of-__setup-handler.patch
 	patches.suse/powerpc-rtas-Keep-MSR-RI-set-when-calling-RTAS.patch
+	patches.suse/KVM-PPC-Book3S-HV-fix-incorrect-NULL-check-on-list-i.patch
 	patches.suse/powerpc-powernv-Get-L1D-flush-requirements-from-devi.patch
 	patches.suse/powerpc-powernv-Get-STF-barrier-requirements-from-de.patch
 	patches.suse/powerpc-perf-Fix-the-threshold-compare-group-constraint-for-power10.patch
