KVM: PPC: Book3S HV: Remove kvmhv_p9_[set,restore]_lpcr declarations (bsc#1194869).

--- a/series.conf
+++ b/series.conf
@@ -13685,6 +13685,7 @@
 	patches.suse/powerpc-powernv-Avoid-crashing-if-rng-is-NULL.patch
 	patches.suse/powerpc-powernv-kvm-Use-darn-for-H_RANDOM-on-Power9.patch
 	patches.suse/powerpc-powernv-rename-remaining-rng-powernv_-functi.patch
+	patches.suse/KVM-PPC-Book3S-HV-Remove-kvmhv_p9_-set-restore-_lpcr.patch
 	patches.suse/scripts-faddr2line-Fix-vmlinux-detection-on-arm64.patch
 	patches.suse/sched-core-Do-not-requeue-task-on-CPU-excluded-from-cpus_mask.patch
 	patches.suse/video-fbdev-amba-clcd-Fix-refcount-leak-bugs.patch
