--- a/series.conf
+++ b/series.conf
@@ -10941,6 +10941,7 @@
 	patches.suse/powerpc-mm-numa-skip-NUMA_NO_NODE-onlining-in-parse_.patch
 	patches.suse/powerpc-lib-sstep-Fix-sthcx-instruction.patch
 	patches.suse/KVM-PPC-Fix-vmx-vsx-mixup-in-mmio-emulation.patch
+	patches.suse/KVM-PPC-Book3S-HV-Check-return-value-of-kvmppc_radix.patch
 	patches.suse/powerpc-sysdev-fix-incorrect-use-to-determine-if-lis.patch
 	patches.suse/powerpc-64s-Don-t-use-DSISR-for-SLB-faults.patch
 	patches.suse/powerpc-pseries-Parse-control-memory-access-error.patch
