net_sched: cls_route: disallow handle of 0 (bsc#1202393).

--- a/series.conf
+++ b/series.conf
@@ -22936,6 +22936,7 @@
 	patches.suse/xfrm-xfrm_policy-fix-a-possible-double-xfrm_pols_put.patch
 	patches.suse/netfilter-nf_queue-do-not-allow-packet-truncation-be.patch
 	patches.suse/net_sched-cls_route-remove-from-list-when-handle-is-.patch
+	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
 
 	########################################################
 	# end of sorted patches
