--- a/blacklist.conf
+++ b/blacklist.conf
@@ -362,3 +362,4 @@ cfd3a9be0ac423be41afcc7a07d708056bf097a8 # selftest:vm: reverting the above
 504627ee4cf4a2d42cba7ce156d423299c06a618 # net: wwan: already applied
 d68c2e1d19c540464ad12a8a11bdd88eedcaf3dc # octeontx2-nicvf:: a76053707dbf is not applied 
 d8d83d8ab0a453e17e68b3a3bed1f940c34b8646 # lib/crypto: blake2s: breakes KABI
+c26d4c5d4f0df7207da3975458261927f9305465 # config only fix
