blacklist.conf: Add c26d4c5d4f0d powerpc/kvm: Remove obsolete and unneeded select

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1590,3 +1590,4 @@ a9e9b091a1c14ecd8bd9d3214a62142a1786fe30 # Missing dependency in mt7530.c. See p
 96ca08c05838d1f5501003f0a6201824e4eede70 # Missing dependencies
 3550bba25d5587a701e6edf20e20984d2ee72c78 # Breaks kABI; No consumers of chip->of_gpio_ranges_fallback
 235cee162459d96153d63651ce7ff51752528c96 # requires 88d8220bbf06dd8045b2ac4be1046290eaa7773a
+c26d4c5d4f0df7207da3975458261927f9305465 # config only fix
