powerpc: define get_cycles macro for arch-override (bsc#1065729).

--- a/series.conf
+++ b/series.conf
@@ -55845,6 +55845,7 @@
 	patches.suse/irqchip-irq-xtensa-mx-fix-initial-IRQ-affinity.patch
 	patches.suse/sched-fair-Revise-comment-about-lb-decision-matrix.patch
 	patches.suse/lockdown-also-lock-down-previous-kgdb-use.patch
+	patches.suse/powerpc-define-get_cycles-macro-for-arch-override.patch
 	patches.suse/arm64-stackleak-fix-current_top_of_stack.patch
 	patches.suse/tpm-ibmvtpm-Correct-the-return-value-in-tpm_ibmvtpm_.patch
 	patches.suse/tpm-Fix-buffer-access-in-tpm2_get_tpm_pt.patch
