--- a/series.conf
+++ b/series.conf
@@ -12900,6 +12900,7 @@
 	patches.suse/modpost-fix-section-mismatch-check-for-exported-init.patch
 	patches.suse/kbuild-link-vmlinux-only-once-for-CONFIG_TRIM_UNUSED.patch
 	patches.suse/powerpc-pseries-wire-up-rng-during-setup_arch.patch
+	patches.suse/powerpc-Enable-execve-syscall-exit-tracepoint.patch
 	patches.suse/powerpc-rtas-Allow-ibm-platform-dump-RTAS-call-with-.patch
 	patches.suse/powerpc-powernv-wire-up-rng-during-setup_arch.patch
 	patches.suse/ARM-dts-imx7-Move-hsic_phy-power-domain-to-HSIC-PHY-.patch
