--- a/series.conf
+++ b/series.conf
@@ -13678,6 +13678,7 @@
 	patches.suse/iommu-vt-d-Remove-global-g_iommus-array.patch
 	patches.suse/iommu-vt-d-Make-DMAR_UNITS_SUPPORTED-default-1024.patch
 	patches.suse/iommu-amd-Simplify-and-Consolidate-Virtual-APIC-AVIC-Enablement
+	patches.suse/powerpc-perf-Optimize-clearing-the-pending-PMI-and-r.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
