--- a/series.conf
+++ b/series.conf
@@ -56689,6 +56689,7 @@
 	patches.suse/iommu-exynos-Handle-failed-IOMMU-device-registration-properly
 	patches.suse/iommu-arm-smmu-qcom_iommu-Add-of_node_put-when-breaking-out-of-l
 	patches.suse/iommu-amd-Simplify-and-Consolidate-Virtual-APIC-AVIC-Enablement
+	patches.suse/powerpc-perf-Optimize-clearing-the-pending-PMI-and-r.patch
 	patches.suse/powerpc-mobility-wait-for-memory-transfer-to-complet.patch
 	patches.suse/watchdog-export-lockup_detector_reconfigure.patch
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
