--- a/series.conf
+++ b/series.conf
@@ -11297,6 +11297,7 @@
 	patches.suse/block-Fix-the-maximum-minor-value-is-blk_alloc_ext_m.patch
 	patches.suse/xen-blkfront-fix-comment-for-need_copy.patch
 	patches.suse/0007-n64cart-convert-bi_disk-to-bi_bdev-bd_disk-fix-build.patch
+	patches.suse/nvme-fix-RCU-hole-that-allowed-for-endless-looping-i.patch
 	patches.suse/drbd-fix-potential-silent-data-corruption.patch
 	patches.suse/xfs-drop-async-cache-flushes-from-CIL-commits.patch
 	patches.suse/watch_queue-Free-the-page-array-when-watch_queue-is-.patch
