x86/Hyper-V: Add SEV negotiate protocol support in Isolation VM (bsc#1190497).

--- a/series.conf
+++ b/series.conf
@@ -12720,6 +12720,7 @@
 	patches.suse/init-Initialize-noop_backing_dev_info-early.patch
 	patches.suse/0019-block-Fix-handling-of-offline-queues-in-blk_mq_alloc.patch
 	patches.suse/clocksource-hyper-v-unexport-__init-annotated-hv_ini.patch
+	patches.suse/x86-hyper-v-add-sev-negotiate-protocol-support-in-isolation-vm.patch
 	patches.suse/arm64-ftrace-fix-branch-range-checks.patch
 	patches.suse/arm64-ftrace-consistently-handle-PLTs.patch
 	patches.suse/arm64-mm-Don-t-invalidate-FROM_DEVICE-buffers-at-start-of-DMA-transfer.patch
