--- a/series.conf
+++ b/series.conf
@@ -13132,6 +13132,7 @@
 	patches.suse/ARM-9216-1-Fix-MAX_DMA_ADDRESS-overflow.patch
 	patches.suse/ARM-findbit-fix-overflowing-offset.patch
 	patches.suse/edac-ghes-set-the-dimm-label-unconditionally.patch
+	patches.suse/revert-x86-sev-expose-sev_es_ghcb_hv_call-for-use-by-hyperv.patch
 	patches.suse/docs-kernel-parameters-Update-descriptions-for-mitig.patch
 	patches.suse/arm64-Do-not-forget-syscall-when-starting-a-new-thre.patch
 	patches.suse/arm64-fix-oops-in-concurrently-setting-insn_emulatio.patch
