--- a/series.conf
+++ b/series.conf
@@ -13802,6 +13802,7 @@
 	patches.suse/ALSA-hda-cirrus-support-for-iMac-12-1-model.patch
 	patches.suse/NTB-ntb_tool-uninitialized-heap-data-in-tool_fn_writ.patch
 	patches.suse/docs-i2c-i2c-sysfs-fix-hyperlinks.patch
+	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
 	patches.suse/drm-i915-gt-Skip-TLB-invalidations-once-wedged.patch
 	patches.suse/drm-meson-Fix-refcount-bugs-in-meson_vpu_has_availab.patch
 	patches.suse/drm-sun4i-dsi-Prevent-underflow-when-computing-packe.patch
