usb: dwc3: qcom: fix missing optional irq warnings.

--- a/series.conf
+++ b/series.conf
@@ -56611,6 +56611,7 @@
 	patches.suse/usb-xhci-tegra-Fix-error-check.patch
 	patches.suse/usb-host-xhci-use-snprintf-in-xhci_decode_trb.patch
 	patches.suse/usb-gadget-udc-amd5536-depends-on-HAS_DMA.patch
+	patches.suse/usb-dwc3-qcom-fix-missing-optional-irq-warnings.patch
 	patches.suse/USB-serial-fix-tty-port-initialized-comments.patch
 	patches.suse/usb-typec-ucsi-Acknowledge-the-GET_ERROR_STATUS-comm.patch
 	patches.suse/staging-rtl8192u-Fix-sleep-in-atomic-context-bug-in-.patch
