xfs: Fix assert failure in xfs_setattr_size() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -48643,6 +48643,7 @@
 	patches.suse/pstore-Fix-typo-in-compression-option-name.patch
 	patches.suse/xfs-fix-an-ABBA-deadlock-in-xfs_rename.patch
 	patches.suse/xfs-fix-up-non-directory-creation-in-SGID-directorie.patch
+	patches.suse/xfs-Fix-assert-failure-in-xfs_setattr_size.patch
 	patches.suse/xfs-sync-lazy-sb-accounting-on-quiesce-of-read-only-.patch
 	patches.suse/xfs-reduce-quota-reservation-when-doing-a-dax-unwrit.patch
 	patches.suse/ata-ahci_brcm-Add-back-regulators-management.patch
