--- a/series.conf
+++ b/series.conf
@@ -50383,6 +50383,7 @@
 	patches.suse/scsi-qla2xxx-Reserve-extra-IRQ-vectors.patch
 	patches.suse/scsi-smartpqi-Remove-unused-functions
 	patches.suse/exfat-fix-erroneous-discard-when-clear-cluster-bit.patch
+	patches.suse/xfs-mark-a-data-structure-sick-if-there-are-cross-re.patch
 	patches.suse/netdevice-Add-missing-IFF_PHONY_HEADROOM-self-defini.patch
 	patches.suse/xsk-Respect-device-s-headroom-and-tailroom-on-generi.patch
 	patches.suse/FDDI-defxx-Bail-out-gracefully-with-unassigned-PCI-r.patch
