--- a/series.conf
+++ b/series.conf
@@ -53649,6 +53649,7 @@
 	patches.suse/KVM-s390-pv-add-macros-for-UVC-CC-values
 	patches.suse/KVM-s390-pv-avoid-double-free-of-sida-page
 	patches.suse/KVM-s390-pv-avoid-stalls-for-kvm_s390_pv_init_vm
+	patches.suse/xfs-use-kmem_cache_free-for-kmem_cache-objects.patch
 	patches.suse/ACPICA-Avoid-evaluating-methods-too-early-during-sys.patch
 	patches.suse/ACPI-battery-Accept-charges-over-the-design-capacity.patch
 	patches.suse/PM-sleep-Do-not-assume-that-mem-is-always-present.patch
