blacklist.conf: Blacklist ext2 since we don't even compile it

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -48,6 +48,7 @@ drivers/net/ethernet/natsemi/sonic.h
 drivers/net/ethernet/renesas/		# Renesas SuperH Ethernet
 drivers/staging/android
 fs/f2fs
+fs/ext2					# Not compiled
 
 # Unsupported ppc platforms
 arch/powerpc/platforms/40x
