ext4: fix error handling code in add_new_gdb (bsc#1179722).

--- a/series.conf
+++ b/series.conf
@@ -45428,6 +45428,7 @@
 	patches.suse/SUNRPC-fix-copying-of-multiple-pages-in-gss_read_pro.patch
 	patches.suse/ext4-fix-leaking-sysfs-kobject-after-failed-mount.patch
 	patches.suse/ext4-disallow-modifying-DAX-inode-flag-if-inline_dat.patch
+	patches.suse/ext4-fix-error-handling-code-in-add_new_gdb.patch
 	patches.suse/ext4-limit-entries-returned-when-counting-fsmap-reco.patch
 	patches.suse/PCI-ACPI-Tone-down-missing-MCFG-message.patch
 	patches.suse/PCI-ACPI-Add-Ampere-Altra-SOC-MCFG-quirk.patch
