ext4: fix invalid inode checksum (bsc#1179723).

--- a/series.conf
+++ b/series.conf
@@ -45430,6 +45430,7 @@
 	patches.suse/ext4-disallow-modifying-DAX-inode-flag-if-inline_dat.patch
 	patches.suse/ext4-fix-error-handling-code-in-add_new_gdb.patch
 	patches.suse/ext4-limit-entries-returned-when-counting-fsmap-reco.patch
+	patches.suse/ext4-fix-invalid-inode-checksum.patch
 	patches.suse/PCI-ACPI-Tone-down-missing-MCFG-message.patch
 	patches.suse/PCI-ACPI-Add-Ampere-Altra-SOC-MCFG-quirk.patch
 	patches.suse/ACPI-APEI-Add-a-notifier-chain-for-unknown-vendor-CP.patch
