ext4: do not set SB_ACTIVE in ext4_orphan_cleanup() (bsc#1202708).

--- a/series.conf
+++ b/series.conf
@@ -50626,6 +50626,7 @@
 	patches.suse/fuse-fix-write-deadlock.patch
 	patches.suse/virtiofs-fix-memory-leak-in-virtio_fs_probe.patch
 	patches.suse/ext4-fix-check-to-prevent-false-positive-report-of-i.patch
+	patches.suse/ext4-do-not-set-SB_ACTIVE-in-ext4_orphan_cleanup.patch
 	patches.suse/ext4-fix-error-code-in-ext4_commit_super.patch
 	patches.suse/fs-fix-reporting-supported-extra-file-attributes-for.patch
 	patches.suse/RDMA-mlx5-Fix-drop-packet-rule-in-egress-table.patch
