--- a/series.conf
+++ b/series.conf
@@ -53245,6 +53245,7 @@
 	patches.suse/hwmon-tmp421-fix-rounding-for-negative-values.patch
 	patches.suse/ext4-fix-reserved-space-counter-leakage.patch
 	patches.suse/ext4-fix-loff_t-overflow-in-ext4_max_bitmap_size.patch
+	patches.suse/ext4-fix-potential-infinite-loop-in-ext4_dx_readdir.patch
 	patches.suse/ovl-fix-missing-negative-dentry-check-in-ovl_rename.patch
 	patches.suse/phy-mdio-fix-memory-leak.patch
 	patches.suse/ath5k-fix-building-with-LEDS-m.patch
