--- a/series.conf
+++ b/series.conf
@@ -54502,6 +54502,7 @@
 	patches.suse/ext4-fix-an-use-after-free-issue-about-data-journal-.patch
 	patches.suse/ext4-Avoid-trim-error-on-fs-with-small-groups.patch
 	patches.suse/ext4-set-csum-seed-in-tmp-inode-while-migrating-to-extents.patch
+	patches.suse/ext4-don-t-use-the-orphan-list-when-migrating-an-ino.patch
 	patches.suse/cputime-cpuacct-Include-guest-time-in-user-time-in-c.patch
 	patches.suse/sched-fair-Fix-detection-of-per-CPU-kthreads-waking-a-task.patch
 	patches.suse/0021-block-Fix-fsync-always-failed-if-once-failed.patch
