ext4: fix error handling in ext4_restore_inline_data() (bsc#1197757).

--- a/series.conf
+++ b/series.conf
@@ -54831,6 +54831,7 @@
 	patches.suse/RDMA-mlx4-Don-t-continue-event-handler-after-memory-.patch
 	patches.suse/edac-altera-fix-deferred-probing.patch
 	patches.suse/edac-xgene-fix-deferred-probing.patch
+	patches.suse/ext4-fix-error-handling-in-ext4_restore_inline_data.patch
 	patches.suse/integrity-check-the-return-value-of-audit_log_start.patch
 	patches.suse/ima-Remove-ima_policy-file-before-directory.patch
 	patches.suse/ima-Allow-template-selection-with-ima_template-_fmt-.patch
