--- a/series.conf
+++ b/series.conf
@@ -55677,6 +55677,7 @@
 	patches.suse/cifs-destage-any-unwritten-data-to-the-server-before-calling-copych.patch
 	patches.suse/KVM-SEV-add-cache-flush-to-solve-SEV-cache-incoherency-issues
 	patches.suse/ata-pata_marvell-Check-the-bmdma_addr-beforing-readi.patch
+	patches.suse/ext4-fix-symlink-file-size-not-match-to-file-content.patch
 	patches.suse/ext4-limit-length-to-bitmap_maxbytes-blocksize-in-pu.patch
 	patches.suse/Input-omap4-keypad-fix-pm_runtime_get_sync-error-che.patch
 	patches.suse/drm-panel-raspberrypi-touchscreen-Avoid-NULL-deref-i.patch
