--- a/series.conf
+++ b/series.conf
@@ -55681,6 +55681,7 @@
 	patches.suse/ext4-fix-use-after-free-in-ext4_search_dir.patch
 	patches.suse/ext4-limit-length-to-bitmap_maxbytes-blocksize-in-pu.patch
 	patches.suse/ext4-fix-overhead-calculation-to-account-for-the-res.patch
+	patches.suse/ext4-force-overhead-calculation-if-the-s_overhead_cl.patch
 	patches.suse/Input-omap4-keypad-fix-pm_runtime_get_sync-error-che.patch
 	patches.suse/drm-panel-raspberrypi-touchscreen-Avoid-NULL-deref-i.patch
 	patches.suse/drm-panel-raspberrypi-touchscreen-Initialise-the-bri.patch
