--- a/series.conf
+++ b/series.conf
@@ -55897,6 +55897,7 @@
 	patches.suse/media-uvcvideo-Fix-missing-check-to-determine-if-ele.patch
 	patches.suse/media-pvrusb2-fix-array-index-out-of-bounds-in-pvr2_.patch
 	patches.suse/media-ov7670-remove-ov7670_power_off-from-ov7670_rem.patch
+	patches.suse/ext4-fix-warning-in-ext4_handle_inode_extension.patch
 	patches.suse/ext4-fix-race-condition-between-ext4_write-and-ext4_.patch
 	patches.suse/ext4-verify-dir-block-before-splitting-it.patch
 	patches.suse/ext4-avoid-cycles-in-directory-h-tree.patch
