ext4: fix bug_on in ext4_writepages (bsc#1200872).

--- a/series.conf
+++ b/series.conf
@@ -55900,6 +55900,7 @@
 	patches.suse/ext4-fix-warning-in-ext4_handle_inode_extension.patch
 	patches.suse/ext4-fix-use-after-free-in-ext4_rename_dir_prepare.patch
 	patches.suse/ext4-fix-race-condition-between-ext4_write-and-ext4_.patch
+	patches.suse/ext4-fix-bug_on-in-ext4_writepages.patch
 	patches.suse/ext4-verify-dir-block-before-splitting-it.patch
 	patches.suse/ext4-avoid-cycles-in-directory-h-tree.patch
 	patches.suse/ext4-fix-bug_on-in-__es_tree_search.patch
