ext4: add reserved GDT blocks check (bsc#1202712).

--- a/series.conf
+++ b/series.conf
@@ -56310,6 +56310,7 @@
 	patches.suse/pNFS-Don-t-keep-retrying-if-the-server-replied-NFS4E.patch
 	patches.suse/ext4-fix-bug_on-ext4_mb_use_inode_pa.patch
 	patches.suse/ext4-make-variable-count-signed.patch
+	patches.suse/ext4-add-reserved-GDT-blocks-check.patch
 	patches.suse/i2c-designware-Use-standard-optional-ref-clock-imple.patch
 	patches.suse/bus-fsl-mc-bus-fix-KASAN-use-after-free-in-fsl_mc_bu.patch
 	patches.suse/mm-slub-add-missing-TID-updates-on-slab-deactivation.patch
