--- a/series.conf
+++ b/series.conf
@@ -16307,6 +16307,7 @@
 	patches.suse/net-sched-act_ctinfo-fix-memory-leak.patch
 	patches.suse/cxgb4-fix-Tx-multi-channel-port-rate-limit.patch
 	patches.suse/cxgb4-reject-overlapped-queues-in-TC-MQPRIO-offload.patch
+	patches.suse/reiserfs-fix-handling-of-EOPNOTSUPP-in-reiserfs_for_.patch
 	patches.suse/hwmon-nct7802-Fix-voltage-limits-to-wrong-registers.patch
 	patches.suse/hwmon-nct7802-Fix-non-working-alarm-on-voltages.patch
 	patches.suse/hwmon-adt7475-Make-volt2reg-return-same-reg-as-reg2v.patch
