--- a/series.conf
+++ b/series.conf
@@ -53192,6 +53192,7 @@
 	patches.suse/scsi-lpfc-Fix-sprintf-overflow-in-lpfc_display_fpin_.patch
 	patches.suse/scsi-lpfc-Use-correct-scnprintf-limit.patch
 	patches.suse/scsi-lpfc-Fix-gcc-Wstringop-overread-warning-again.patch
+	patches.suse/ocfs2-drop-acl-cache-for-directories-too.patch
 	patches.suse/x86-asm-fix-setz-size-enqcmds-build-failure.patch
 	patches.suse/thermal-drivers-int340x-Do-not-set-a-wrong-tcc-offse.patch
 	patches.suse/thermal-core-Potential-buffer-overflow-in-thermal_bu.patch
