--- a/series.conf
+++ b/series.conf
@@ -55085,6 +55085,7 @@
 	patches.suse/net-mlx5-Fix-a-race-on-command-flush-flow.patch
 	patches.suse/drm-sun4i-mixer-Fix-P010-and-P210-format-numbers.patch
 	patches.suse/mmc-meson-Fix-usage-of-meson_mmc_post_req.patch
+	patches.suse/ocfs2-fix-crash-when-initialize-filecheck-kobj-fails.patch
 	patches.suse/net-phy-marvell-Fix-invalid-comparison-in-the-resume.patch
 	patches.suse/af_key-add-__GFP_ZERO-flag-for-compose_sadb_supporte.patch
 	patches.suse/drm-imx-parallel-display-Remove-bus-flags-check-in-i.patch
