--- a/series.conf
+++ b/series.conf
@@ -56716,6 +56716,7 @@
 	patches.suse/scsi-qla2xxx-Fix-sparse-warning-for-dport_data.patch
 	patches.suse/scsi-qla2xxx-Update-manufacturer-details.patch
 	patches.suse/scsi-qla2xxx-Update-version-to-10.02.07.800-k.patch
+	patches.suse/jbd2-fix-outstanding-credits-assert-in-jbd2_journal_.patch
 	patches.suse/ext4-recover-csum-seed-of-tmp_inode-after-migrating-.patch
 	patches.suse/mbcache-don-t-reclaim-used-entries.patch
 	patches.suse/mbcache-add-functions-to-delete-entry-if-unused.patch
