mm: bdi: initialize bdi_min_ratio when bdi is unregistered (bsc#1197763).

--- a/series.conf
+++ b/series.conf
@@ -54148,6 +54148,7 @@
 	patches.suse/nfsd-Fix-nsfd-startup-race-again.patch
 	patches.suse/nfsd-fix-use-after-free-due-to-delegation-race.patch
 	patches.suse/cifs-fix-ntlmssp-auth-when-there-is-no-key-exchange.patch
+	patches.suse/mm-bdi-initialize-bdi_min_ratio-when-bdi-is-unregist.patch
 	patches.suse/clk-qcom-regmap-mux-fix-parent-clock-lookup.patch
 	patches.suse/nvme-fix-use-after-free-when-disconnecting-a-reconne.patch
 	patches.suse/0001-md-fix-update-super-1.0-on-rdev-size-change.patch
