blk-iocost: fix weight updates of inner active iocgs (bsc#1202717).

--- a/series.conf
+++ b/series.conf
@@ -50811,6 +50811,7 @@
 	patches.suse/dax-Add-a-wakeup-mode-parameter-to-put_unlocked_entr.patch
 	patches.suse/dax-Wake-up-all-waiters-after-invalidating-dax-entry.patch
 	patches.suse/kyber-fix-out-of-bounds-access-when-preempted.patch
+	patches.suse/blk-iocost-fix-weight-updates-of-inner-active-iocgs.patch
 	patches.suse/0006-nbd-Fix-NULL-pointer-in-flush_workqueue.patch
 	patches.suse/nvme-multipath_fix_double_initialization_of_ANA_state.patch
 	patches.suse/nvmet-rdma-Fix-NULL-deref-when-SEND-is-completed-wit.patch
