--- a/series.conf
+++ b/series.conf
@@ -51544,6 +51544,7 @@
 	patches.suse/blk-mq-update-hctx-dispatch_busy-in-case-of-real-sch.patch
 	patches.suse/nvme-tcp-allow-selecting-the-network-interface-for-c.patch
 	patches.suse/0002-md-revert-io-stats-accounting.patch
+	patches.suse/loop-Fix-missing-discard-support-when-using-LOOP_CON.patch
 	patches.suse/nvme-verify-MNAN-value-if-ANA-is-enabled.patch
 	patches.suse/nvme-tcp-fix-error-codes-in-nvme_tcp_setup_ctrl.patch
 	patches.suse/nvmet-use-NVMET_MAX_NAMESPACES-to-set-nn-value.patch
