blk-iocost: fix operation ordering in iocg_wake_fn() (bsc#1202720).

--- a/series.conf
+++ b/series.conf
@@ -52318,6 +52318,7 @@
 	patches.suse/btrfs-fix-lost-inode-on-log-replay-after-mix-of-fsyn.patch
 	patches.suse/libata-fix-ata_pio_sector-for-CONFIG_HIGHMEM.patch
 	patches.suse/blk-mq-sched-Fix-blk_mq_sched_alloc_tags-error-handl.patch
+	patches.suse/blk-iocost-fix-operation-ordering-in-iocg_wake_fn.patch
 	patches.suse/Revert-ACPI-resources-Add-checks-for-ACPI-IRQ-overri.patch
 	patches.suse/ACPI-DPTF-Fix-reading-of-attributes.patch
 	patches.suse/virt_wifi-fix-error-on-connect.patch
