blk-iocost: rename propagate_active_weights() to propagate_weights() (bsc#1202722).

--- a/series.conf
+++ b/series.conf
@@ -43582,6 +43582,7 @@
 	patches.suse/block-replace-bd_set_size-with-bd_set_nr_sectors.patch
 	patches.suse/block-fix-locking-for-struct-block_device-size-updat.patch
 	patches.suse/nvme-don-t-call-revalidate_disk-from-nvme_set_queue_.patch
+	patches.suse/blk-iocost-rename-propagate_active_weights-to-propag.patch
 	patches.suse/block-add-a-new-revalidate_disk_size-helper
 	patches.suse/block-use-revalidate_disk_size-in-set_capacity_revalidate_and_notify
 	patches.suse/nvme-opencode-revalidate_disk-in-nvme_validate_ns.patch
