--- a/series.conf
+++ b/series.conf
@@ -43583,6 +43583,7 @@
 	patches.suse/block-fix-locking-for-struct-block_device-size-updat.patch
 	patches.suse/nvme-don-t-call-revalidate_disk-from-nvme_set_queue_.patch
 	patches.suse/blk-iocost-rename-propagate_active_weights-to-propag.patch
+	patches.suse/blk-iocost-clamp-inuse-and-skip-noops-in-__propagate.patch
 	patches.suse/block-add-a-new-revalidate_disk_size-helper
 	patches.suse/block-use-revalidate_disk_size-in-set_capacity_revalidate_and_notify
 	patches.suse/nvme-opencode-revalidate_disk-in-nvme_validate_ns.patch
