ASoC: nau8824: Fix semaphore unbalance at error paths (bsc#1201418).

--- a/series.conf
+++ b/series.conf
@@ -199,6 +199,7 @@
 	# Other drivers
 	########################################################
 	patches.suse/ASoC-nau8821-Implement-hw-constraint-for-rates.patch
+	patches.suse/ASoC-nau8824-Fix-semaphore-unbalance-at-error-paths.patch
 
 
 	########################################################
