ASoC: nau8821: Implement hw constraint for rates (bsc#1201418).

--- a/series.conf
+++ b/series.conf
@@ -198,6 +198,7 @@
 	########################################################
 	# Other drivers
 	########################################################
+	patches.suse/ASoC-nau8821-Implement-hw-constraint-for-rates.patch
 
 
 	########################################################
