--- a/series.conf
+++ b/series.conf
@@ -201,6 +201,7 @@
 	patches.suse/ASoC-nau8821-Implement-hw-constraint-for-rates.patch
 	patches.suse/ASoC-nau8824-Fix-semaphore-unbalance-at-error-paths.patch
 	patches.suse/ASoC-nau8824-Implement-hw-constraint-for-rates.patch
+	patches.suse/ASoC-nau8825-Implement-hw-constraint-for-rates.patch
 
 
 	########################################################
