--- a/series.conf
+++ b/series.conf
@@ -200,6 +200,7 @@
 	########################################################
 	patches.suse/ASoC-nau8821-Implement-hw-constraint-for-rates.patch
 	patches.suse/ASoC-nau8824-Fix-semaphore-unbalance-at-error-paths.patch
+	patches.suse/ASoC-nau8824-Implement-hw-constraint-for-rates.patch
 
 
 	########################################################
