ASoC: nau8540: Implement hw constraint for rates (bsc#1201418).

--- a/series.conf
+++ b/series.conf
@@ -202,7 +202,7 @@
 	patches.suse/ASoC-nau8824-Fix-semaphore-unbalance-at-error-paths.patch
 	patches.suse/ASoC-nau8824-Implement-hw-constraint-for-rates.patch
 	patches.suse/ASoC-nau8825-Implement-hw-constraint-for-rates.patch
-
+	patches.suse/ASoC-nau8540-Implement-hw-constraint-for-rates.patch
 
 	########################################################
 	# Debugging
