list: add "list_del_init_careful()" to go with "list_empty_careful()" (bsc#1202745).

--- a/series.conf
+++ b/series.conf
@@ -36867,6 +36867,7 @@
 	patches.suse/vxlan-fix-memleak-of-fdb.patch
 	patches.suse/kvm-lapic-prevent-setting-the-tscdeadline-timer-if-t.patch
 	patches.suse/x86-i8259-Use-printk_deferred-to-prevent-deadlock.patch
+	patches.suse/list-add-list_del_init_careful-to-go-with-list_empty.patch
 	patches.suse/tpm-Require-that-all-digests-are-present-in-TCG_PCR_.patch
 	patches.suse/tpm-Unify-the-mismatching-TPM-space-buffer-sizes.patch
 	patches.suse/acpi-Extend-TPM2-ACPI-table-with-missing-log-fields.patch
