--- a/series.conf
+++ b/series.conf
@@ -8654,6 +8654,7 @@
 	patches.suse/xfs-prevent-UAF-in-xfs_log_item_in_current_chkpt.patch
 	patches.suse/ext4-fix-fast-commit-may-miss-tracking-range-for-FAL.patch
 	patches.suse/ext4-use-ext4_ext_remove_space-for-fast-commit-repla.patch
+	patches.suse/ext4-fast-commit-may-miss-tracking-unwritten-range-d.patch
 	patches.suse/ext4-destroy-ext4_fc_dentry_cachep-kmemcache-on-modu.patch
 	patches.suse/ext4-fix-an-use-after-free-issue-about-data-journal-.patch
 	patches.suse/ext4-avoid-trim-error-on-fs-with-small-groups.patch
