ext4: Fix BUG_ON in ext4_bread when write quota data (bsc#1197755).

--- a/series.conf
+++ b/series.conf
@@ -8656,6 +8656,7 @@
 	patches.suse/ext4-use-ext4_ext_remove_space-for-fast-commit-repla.patch
 	patches.suse/ext4-fast-commit-may-miss-tracking-unwritten-range-d.patch
 	patches.suse/ext4-destroy-ext4_fc_dentry_cachep-kmemcache-on-modu.patch
+	patches.suse/ext4-Fix-BUG_ON-in-ext4_bread-when-write-quota-data.patch
 	patches.suse/ext4-fix-an-use-after-free-issue-about-data-journal-.patch
 	patches.suse/ext4-avoid-trim-error-on-fs-with-small-groups.patch
 	patches.suse/ext4-set-csum-seed-in-tmp-inode-while-migrating-to-extents.patch
