--- a/series.conf
+++ b/series.conf
@@ -8658,6 +8658,7 @@
 	patches.suse/ext4-destroy-ext4_fc_dentry_cachep-kmemcache-on-modu.patch
 	patches.suse/ext4-Fix-BUG_ON-in-ext4_bread-when-write-quota-data.patch
 	patches.suse/ext4-make-sure-quota-gets-properly-shutdown-on-error.patch
+	patches.suse/ext4-make-sure-to-reset-inode-lockdep-class-when-quo.patch
 	patches.suse/ext4-fix-an-use-after-free-issue-about-data-journal-.patch
 	patches.suse/ext4-avoid-trim-error-on-fs-with-small-groups.patch
 	patches.suse/ext4-set-csum-seed-in-tmp-inode-while-migrating-to-extents.patch
