ext4: fix a possible ABBA deadlock due to busy PA (bsc#1202762).

--- a/series.conf
+++ b/series.conf
@@ -8659,6 +8659,7 @@
 	patches.suse/ext4-Fix-BUG_ON-in-ext4_bread-when-write-quota-data.patch
 	patches.suse/ext4-make-sure-quota-gets-properly-shutdown-on-error.patch
 	patches.suse/ext4-make-sure-to-reset-inode-lockdep-class-when-quo.patch
+	patches.suse/ext4-fix-a-possible-ABBA-deadlock-due-to-busy-PA.patch
 	patches.suse/ext4-fix-an-use-after-free-issue-about-data-journal-.patch
 	patches.suse/ext4-avoid-trim-error-on-fs-with-small-groups.patch
 	patches.suse/ext4-set-csum-seed-in-tmp-inode-while-migrating-to-extents.patch
