--- a/series.conf
+++ b/series.conf
@@ -8661,6 +8661,7 @@
 	patches.suse/ext4-make-sure-to-reset-inode-lockdep-class-when-quo.patch
 	patches.suse/ext4-fix-a-possible-ABBA-deadlock-due-to-busy-PA.patch
 	patches.suse/ext4-initialize-err_blk-before-calling-__ext4_get_in.patch
+	patches.suse/ext4-fix-null-ptr-deref-in-__ext4_journal_ensure_cre.patch
 	patches.suse/ext4-fix-an-use-after-free-issue-about-data-journal-.patch
 	patches.suse/ext4-avoid-trim-error-on-fs-with-small-groups.patch
 	patches.suse/ext4-set-csum-seed-in-tmp-inode-while-migrating-to-extents.patch
