--- a/series.conf
+++ b/series.conf
@@ -8665,6 +8665,7 @@
 	patches.suse/ext4-fix-an-use-after-free-issue-about-data-journal-.patch
 	patches.suse/ext4-avoid-trim-error-on-fs-with-small-groups.patch
 	patches.suse/ext4-set-csum-seed-in-tmp-inode-while-migrating-to-extents.patch
+	patches.suse/ext4-don-t-use-the-orphan-list-when-migrating-an-ino.patch
 	patches.suse/lib-logic_iomem-Fix-32-bit-build.patch
 	patches.suse/lib-logic_iomem-Fix-operation-on-32-bit.patch
 	patches.suse/ARM-9159-1-decompressor-Avoid-UNPREDICTABLE-NOP-enco.patch
