ext4: prevent used blocks from being allocated during fast commit replay (bsc#1202765).

--- a/series.conf
+++ b/series.conf
@@ -9490,6 +9490,7 @@
 	patches.suse/perf-Copy-perf_event_attr-sig_data-on-modification.patch
 	patches.suse/perf-x86-intel-pt-Fix-crash-with-stop-filters-in-single-range-mode.patch
 	patches.suse/tools-include-UAPI-Sync-sound-asound.h-copy-with-the.patch
+	patches.suse/ext4-prevent-used-blocks-from-being-allocated-during.patch
 	patches.suse/ima-fix-reference-leak-in-asymmetric_verify.patch
 	patches.suse/integrity-check-the-return-value-of-audit_log_start.patch
 	patches.suse/ima-Remove-ima_policy-file-before-directory.patch
