--- a/series.conf
+++ b/series.conf
@@ -5068,6 +5068,7 @@
 	patches.suse/ARM-clang-Do-not-rely-on-lr-register-for-stacktrace.patch
 	patches.suse/tools-latency-collector-Use-correct-size-when-writin.patch
 	patches.suse/trace-osnoise-Add-migrate-disabled-field-to-the-osnoise-header.patch
+	patches.suse/trace-timerlat-Add-migrate-disabled-field-to-the-timerlat-header.patch
 	patches.suse/samples-kretprobes-Fix-return-value-if-register_kret.patch
 	patches.suse/ftrace-do-CPU-checking-after-preemption-disabled.patch
 	patches.suse/tracing-Increase-PERF_MAX_TRACE_SIZE-to-handle-Senti.patch
