--- a/series.conf
+++ b/series.conf
@@ -9491,6 +9491,7 @@
 	patches.suse/perf-x86-intel-pt-Fix-crash-with-stop-filters-in-single-range-mode.patch
 	patches.suse/tools-include-UAPI-Sync-sound-asound.h-copy-with-the.patch
 	patches.suse/ext4-prevent-used-blocks-from-being-allocated-during.patch
+	patches.suse/ext4-modify-the-logic-of-ext4_mb_new_blocks_simple.patch
 	patches.suse/ima-fix-reference-leak-in-asymmetric_verify.patch
 	patches.suse/integrity-check-the-return-value-of-audit_log_start.patch
 	patches.suse/ima-Remove-ima_policy-file-before-directory.patch
