tracing: Add ustring operation to filtering string pointers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9025,6 +9025,7 @@
 	patches.suse/tracing-Add-test-for-user-space-strings-when-filtering-on-string-pointers.patch
 	patches.suse/tracing-kprobes-nmissed-not-showed-correctly-for-kretprobe.patch
 	patches.suse/tracing-osnoise-Properly-unhook-events-if-start_per_cpu_kthreads-fails.patch
+	patches.suse/tracing-Add-ustring-operation-to-filtering-string-pointers.patch
 	patches.suse/msft-hv-0000-swiotlb-Add-swiotlb-bounce-buffer-remap-function-for.patch
 	patches.suse/msft-hv-0001-x86-hyper-v-Add-hyperv-Isolation-VM-check-in-the-cc_.patch
 	patches.suse/msft-hv-2486-hyper-v-Enable-swiotlb-bounce-buffer-for-Isolation-V.patch
