ext4: fix fs corruption when tring to remove a non-empty directory with IO error (bsc#1202768).

--- a/series.conf
+++ b/series.conf
@@ -10295,6 +10295,7 @@
 	patches.suse/nfsd-more-robust-allocation-failure-handling-in-nfsd.patch
 	patches.suse/NFSD-prevent-underflow-in-nfssvc_decode_writeargs.patch
 	patches.suse/NFSD-prevent-integer-overflow-on-32-bit-systems.patch
+	patches.suse/ext4-fix-fs-corruption-when-tring-to-remove-a-non-em.patch
 	patches.suse/ext4-fix-ext4_fc_stats-trace-point.patch
 	patches.suse/perf-core-Fix-address-filter-parser-for-multiple-filters.patch
 	patches.suse/perf-x86-intel-pt-Fix-address-filter-config-for-32-bit-kernel.patch
