ext4: fix fallocate to use file_modified to update permissions consistently (bsc#1202769).
Refresh ext4-fix-race-condition-between-ext4_write-and-ext4_.patch

--- a/series.conf
+++ b/series.conf
@@ -11572,6 +11572,7 @@
 	patches.suse/KVM-SEV-add-cache-flush-to-solve-SEV-cache-incoherency-issues
 	patches.suse/kvm-selftests-do-not-use-bitfields-larger-than-32-bi.patch
 	patches.suse/ata-pata_marvell-Check-the-bmdma_addr-beforing-readi.patch
+	patches.suse/ext4-fix-fallocate-to-use-file_modified-to-update-pe.patch
 	patches.suse/ext4-limit-length-to-bitmap_maxbytes-blocksize-in-pu.patch
 	patches.suse/Input-omap4-keypad-fix-pm_runtime_get_sync-error-che.patch
 	patches.suse/drm-panel-raspberrypi-touchscreen-Avoid-NULL-deref-i.patch
