--- a/series.conf
+++ b/series.conf
@@ -11574,6 +11574,7 @@
 	patches.suse/ata-pata_marvell-Check-the-bmdma_addr-beforing-readi.patch
 	patches.suse/ext4-fix-fallocate-to-use-file_modified-to-update-pe.patch
 	patches.suse/ext4-fix-symlink-file-size-not-match-to-file-content.patch
+	patches.suse/ext4-fix-use-after-free-in-ext4_search_dir.patch
 	patches.suse/ext4-limit-length-to-bitmap_maxbytes-blocksize-in-pu.patch
 	patches.suse/Input-omap4-keypad-fix-pm_runtime_get_sync-error-che.patch
 	patches.suse/drm-panel-raspberrypi-touchscreen-Avoid-NULL-deref-i.patch
