ext4: fix overhead calculation to account for the reserved gdt blocks (bsc#1200869).

--- a/series.conf
+++ b/series.conf
@@ -11576,6 +11576,7 @@
 	patches.suse/ext4-fix-symlink-file-size-not-match-to-file-content.patch
 	patches.suse/ext4-fix-use-after-free-in-ext4_search_dir.patch
 	patches.suse/ext4-limit-length-to-bitmap_maxbytes-blocksize-in-pu.patch
+	patches.suse/ext4-fix-overhead-calculation-to-account-for-the-res.patch
 	patches.suse/Input-omap4-keypad-fix-pm_runtime_get_sync-error-che.patch
 	patches.suse/drm-panel-raspberrypi-touchscreen-Avoid-NULL-deref-i.patch
 	patches.suse/drm-panel-raspberrypi-touchscreen-Initialise-the-bri.patch
