ext4: fix warning in ext4_handle_inode_extension (bsc#1202711).

--- a/series.conf
+++ b/series.conf
@@ -12072,6 +12072,7 @@
 	patches.suse/media-rkvdec-h264-Fix-dpb_valid-implementation.patch
 	patches.suse/media-rkvdec-h264-Fix-bit-depth-wrap-in-pps-packet.patch
 	patches.suse/exfat-fix-referencing-wrong-parent-directory-informa.patch
+	patches.suse/ext4-fix-warning-in-ext4_handle_inode_extension.patch
 	patches.suse/ext4-fix-race-condition-between-ext4_write-and-ext4_.patch
 	patches.suse/ext4-reject-the-commit-option-on-ext2-filesystems.patch
 	patches.suse/ext4-verify-dir-block-before-splitting-it.patch
