ext4: fix bug_on in ext4_writepages (bsc#1200872).

--- a/series.conf
+++ b/series.conf
@@ -12078,6 +12078,7 @@
 	patches.suse/ext4-mark-group-as-trimmed-only-if-it-was-fully-scan.patch
 	patches.suse/ext4-fix-race-condition-between-ext4_write-and-ext4_.patch
 	patches.suse/ext4-reject-the-commit-option-on-ext2-filesystems.patch
+	patches.suse/ext4-fix-bug_on-in-ext4_writepages.patch
 	patches.suse/ext4-verify-dir-block-before-splitting-it.patch
 	patches.suse/ext4-avoid-cycles-in-directory-h-tree.patch
 	patches.suse/ext4-fix-bug_on-in-__es_tree_search.patch
