ext4: filter out EXT4_FC_REPLAY from on-disk superblock field s_state (bsc#1202771).

--- a/series.conf
+++ b/series.conf
@@ -12079,6 +12079,7 @@
 	patches.suse/ext4-fix-race-condition-between-ext4_write-and-ext4_.patch
 	patches.suse/ext4-reject-the-commit-option-on-ext2-filesystems.patch
 	patches.suse/ext4-fix-bug_on-in-ext4_writepages.patch
+	patches.suse/ext4-filter-out-EXT4_FC_REPLAY-from-on-disk-superblo.patch
 	patches.suse/ext4-verify-dir-block-before-splitting-it.patch
 	patches.suse/ext4-avoid-cycles-in-directory-h-tree.patch
 	patches.suse/ext4-fix-bug_on-in-__es_tree_search.patch
