--- a/series.conf
+++ b/series.conf
@@ -12788,6 +12788,7 @@
 	patches.suse/arm64-mm-Don-t-invalidate-FROM_DEVICE-buffers-at-start-of-DMA-transfer.patch
 	patches.suse/pNFS-Don-t-keep-retrying-if-the-server-replied-NFS4E.patch
 	patches.suse/pNFS-Avoid-a-live-lock-condition-in-pnfs_update_layo.patch
+	patches.suse/ext4-fix-super-block-checksum-incorrect-after-mount.patch
 	patches.suse/ext4-fix-bug_on-ext4_mb_use_inode_pa.patch
 	patches.suse/ext4-make-variable-count-signed.patch
 	patches.suse/i2c-npcm7xx-Add-check-for-platform_driver_register.patch
