ext4: add reserved GDT blocks check (bsc#1202712).

--- a/series.conf
+++ b/series.conf
@@ -12791,6 +12791,7 @@
 	patches.suse/ext4-fix-super-block-checksum-incorrect-after-mount.patch
 	patches.suse/ext4-fix-bug_on-ext4_mb_use_inode_pa.patch
 	patches.suse/ext4-make-variable-count-signed.patch
+	patches.suse/ext4-add-reserved-GDT-blocks-check.patch
 	patches.suse/i2c-npcm7xx-Add-check-for-platform_driver_register.patch
 	patches.suse/i2c-designware-Use-standard-optional-ref-clock-imple.patch
 	patches.suse/comedi-vmk80xx-fix-expression-for-tx-buffer-size.patch
