--- a/series.conf
+++ b/series.conf
@@ -13666,6 +13666,7 @@
 	patches.suse/0009-nvmet-Implement-basic-In-Band-Authentication.patch
 	patches.suse/0010-nvmet-auth-Diffie-Hellman-key-exchange-support.patch
 	patches.suse/0011-nvmet-auth-expire-authentication-sessions.patch
+	patches.suse/ext4-recover-csum-seed-of-tmp_inode-after-migrating-.patch
 	patches.suse/ext4-check-if-directory-block-is-within-i_size.patch
 	patches.suse/ext4-make-sure-ext4_append-always-allocates-new-bloc.patch
 	patches.suse/mbcache-don-t-reclaim-used-entries.patch
