udf: Fix crash after seekdir (bsc#1194592).

--- a/series.conf
+++ b/series.conf
@@ -7054,6 +7054,7 @@
 	patches.suse/selftests-KVM-Add-x86_64-sev_migrate_tests-to-.gitig.patch
 	patches.suse/KVM-x86-Assume-a-64-bit-hypercall-for-guests-with-pr.patch
 	patches.suse/fs-handle-circular-mappings-correctly.patch
+	patches.suse/udf-Fix-crash-after-seekdir.patch
 	patches.suse/btrfs-fix-memory-ordering-between-normal-and-ordered-work-functions.patch
 	patches.suse/hamradio-remove-needs_free_netdev-to-avoid-UAF.patch
 	patches.suse/net-ipa-ipa_resource-Fix-wrong-for-loop-range.patch
