--- a/blacklist.conf
+++ b/blacklist.conf
@@ -366,3 +366,4 @@ c26d4c5d4f0df7207da3975458261927f9305465 # config only fix
 c51ba246cb172c9e947dc6fb8868a1eaf0b2a913 # cleanup with a risk of regressions
 9ef165406308515dcf2e3f6e97b39a1c56d86db5 # pure cleanup
 5f41fdaea63ddf96d921ab36b2af4a90ccdb5744 # Requires new mount API in ext4
+d41b60359ffb24a39c93ea1f4bffaafd651118c3 # Documentation fix
