--- a/series.conf
+++ b/series.conf
@@ -9346,6 +9346,7 @@
 	patches.suse/tools-testing-scatterlist-add-missing-defines.patch
 	patches.suse/psi-fix-defined-but-not-used-warnings-when-CONFIG_PR.patch
 	patches.suse/jbd2-export-jbd2_journal_-grab-put-_journal_head.patch
+	patches.suse/ocfs2-fix-a-deadlock-when-commit-trans.patch
 	patches.suse/x86-mce-amd-allow-thresholding-interface-updates-after-init.patch
 	patches.suse/x86-cpu-add-xeon-icelake-d-to-list-of-cpus-that-support-ppin.patch
 	patches.suse/sched-membarrier-Fix-membarrier-rseq-fence-command-m.patch
