--- a/series.conf
+++ b/series.conf
@@ -11927,6 +11927,7 @@
 	patches.suse/i2c-ismt-Provide-a-DMA-buffer-for-Interrupt-Cause-Lo.patch
 	patches.suse/drivers-i2c-thunderx-Allow-driver-to-work-with-ACPI-.patch
 	patches.suse/efi-Add-missing-prototype-for-efi_capsule_setup_info.patch
+	patches.suse/fs-writeback-writeback_sb_inodes-Recalculate-wrote-a.patch
 	patches.suse/bfq-Avoid-false-marking-of-bic-as-stably-merged.patch
 	patches.suse/bfq-Avoid-merging-queues-with-different-parents.patch
 	patches.suse/bfq-Split-shared-queues-on-move-between-cgroups.patch
