- ocfs2: dlmfs: fix error handling of user_dlm_destroy_lock   (bsc#1202778).

--- a/series.conf
+++ b/series.conf
@@ -12379,6 +12379,7 @@
 	patches.suse/proc-fix-dentry-inode-overinstantiating-under-proc-p.patch
 	patches.suse/gen_init_cpio-fix-short-read-file-handling.patch
 	patches.suse/tty-fix-deadlock-caused-by-calling-printk-under-tty_.patch
+	patches.suse/ocfs2-dlmfs-fix-error-handling-of-user_dlm_destroy_l.patch
 	patches.suse/mm-page_alloc-always-attempt-to-allocate-at-least-one-page-during-bulk-allocation.patch
 	patches.suse/kexec_file-drop-weak-attribute-from-arch_kexec_apply.patch
 	patches.suse/PCI-AER-Clear-MULTI_ERR_COR-UNCOR_RCV-bits.patch
