jbd2: fix assertion 'jh->b_frozen_data == NULL' failure when journal aborted (bsc#1202716).

--- a/series.conf
+++ b/series.conf
@@ -13682,6 +13682,7 @@
 	patches.suse/ext4-remove-EA-inode-entry-from-mbcache-on-inode-evi.patch
 	patches.suse/ext4-unindent-codeblock-in-ext4_xattr_block_set.patch
 	patches.suse/ext4-fix-race-when-reusing-xattr-blocks.patch
+	patches.suse/jbd2-fix-assertion-jh-b_frozen_data-NULL-failure-whe.patch
 	patches.suse/xfs-fix-use-after-free-in-xattr-node-block-inactivat.patch
 	patches.suse/Input-gscps2-check-return-value-of-ioremap-in-gscps2.patch
 	patches.suse/ARM-dts-uniphier-Fix-USB-interrupts-for-PXs2-SoC.patch
