--- a/series.conf
+++ b/series.conf
@@ -8695,6 +8695,7 @@
 	patches.suse/bfq-Limit-number-of-requests-consumed-by-each-cgroup.patch
 	patches.suse/bfq-Limit-waker-detection-in-time.patch
 	patches.suse/bfq-Do-not-let-waker-requests-skip-proper-accounting.patch
+	patches.suse/block-Fix-fsync-always-failed-if-once-failed.patch
 	patches.suse/floppy-Fix-hang-in-watchdog-when-disk-is-ejected.patch
 	patches.suse/floppy-Add-max-size-check-for-user-space-request.patch
 	patches.suse/nvme-fabrics-print-out-valid-arguments-when-reading-.patch
