block: Fix wrong offset in bio_truncate() (bsc#1202780).

--- a/series.conf
+++ b/series.conf
@@ -9164,6 +9164,7 @@
 	patches.suse/ALSA-hda-cs8409-Add-new-Warlock-SKUs-to-patch_cs8409.patch
 	patches.suse/blk-mq-fix-tag_get-wait-task-can-t-be-awakened.patch
 	patches.suse/block-assign-bi_bdev-for-cloned-bios-in-blk_rq_prep_.patch
+	patches.suse/block-Fix-wrong-offset-in-bio_truncate.patch
 	patches.suse/block-fix-async_depth-sysfs-interface-for-mq-deadlin.patch
 	patches.suse/HID-Ignore-battery-for-Elan-touchscreen-on-HP-Envy-X-f3193ea1b677.patch
 	patches.suse/HID-vivaldi-fix-handling-devices-not-using-numbered-.patch
