block: fix rq-qos breakage from skipping rq_qos_done_bio() (bsc#1202781).

--- a/series.conf
+++ b/series.conf
@@ -10259,6 +10259,7 @@
 	patches.suse/blk-cgroup-set-blkg-iostat-after-percpu-stat-aggrega.patch
 	patches.suse/block-update-io_ticks-when-io-hang.patch
 	patches.suse/block-don-t-delete-queue-kobject-before-its-children.patch
+	patches.suse/block-fix-rq-qos-breakage-from-skipping-rq_qos_done_.patch
 	patches.suse/block-don-t-merge-across-cgroup-boundaries-if-blkcg-.patch
 	patches.suse/block-limit-request-dispatch-loop-duration.patch
 	patches.suse/loop-use-sysfs_emit-in-the-sysfs-xxx-show.patch
