--- a/series.conf
+++ b/series.conf
@@ -4578,6 +4578,7 @@
 	patches.suse/tpm_tis_spi-Add-missing-SPI-ID.patch
 	patches.suse/block-mq-deadline-Improve-request-accounting-further.patch
 	patches.suse/block-bump-max-plugged-deferred-size-from-16-to-32.patch
+	patches.suse/block-only-mark-bio-as-tracked-if-it-really-is-track.patch
 	patches.suse/block-bfq-fix-UAF-problem-in-bfqg_stats_init.patch
 	patches.suse/nvme-add-APIs-for-stopping-starting-admin-queue.patch
 	patches.suse/nvme-apply-nvme-API-to-quiesce-unquiesce-admin-queue.patch
