--- a/series.conf
+++ b/series.conf
@@ -13535,6 +13535,7 @@
 	patches.suse/platform-olpc-Fix-uninitialized-data-in-debugfs-writ.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
+	patches.suse/clk-ti-Stop-using-legacy-clkctrl-names-for-omap4-and.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-UART-clkgrp-bitsel.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-halt-on-boot-by-reducing-d.patch
 	patches.suse/clk-qcom-clk-krait-unlock-spin-after-mux-completion.patch
