--- a/series.conf
+++ b/series.conf
@@ -13552,6 +13552,7 @@
 	patches.suse/clk-qcom-camcc-sm8250-Fix-topology-around-titan_top-.patch
 	patches.suse/clk-qcom-clk-rcg2-Fail-Duty-Cycle-configuration-if-M.patch
 	patches.suse/clk-qcom-clk-rcg2-Make-sure-to-not-write-d-0-to-the-.patch
+	patches.suse/clk-qcom-clk-alpha-pll-fix-clk_trion_pll_configure-d.patch
 	patches.suse/dt-bindings-clock-qcom-gcc-msm8996-add-more-GCC-cloc.patch
 	patches.suse/clk-qcom-gcc-msm8939-Fix-weird-field-spacing-in-ftbl.patch
 	patches.suse/dmaengine-stm32-mdma-Remove-dead-code-in-stm32_mdma_.patch
