--- a/series.conf
+++ b/series.conf
@@ -13688,6 +13688,7 @@
 	patches.suse/ASoC-qcom-Fix-missing-of_node_put-in-asoc_qcom_lpass.patch
 	patches.suse/ASoC-imx-card-Fix-DSD-PDM-mclk-frequency.patch
 	patches.suse/ASoC-mt6359-Fix-refcount-leak-bug.patch
+	patches.suse/ASoC-rsnd-care-default-case-on-rsnd_ssiu_busif_err_i.patch
 	patches.suse/ALSA-usb-audio-Add-quirk-for-Behringer-UMC202HD.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Lenovo-Yoga9-14IAP7.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Clevo-NV45PZ.patch
