--- a/series.conf
+++ b/series.conf
@@ -13841,6 +13841,7 @@
 	patches.suse/ata-libata-eh-Add-missing-command-name.patch
 	patches.suse/kbuild-fix-the-modules-order-between-drivers-and-lib.patch
 	patches.suse/i2c-imx-Make-sure-to-unregister-adapter-on-remove.patch
+	patches.suse/audit-fix-potential-double-free-on-error-path-from-f.patch
 
 	########################################################
 	# end of sorted patches
