--- a/series.conf
+++ b/series.conf
@@ -13784,6 +13784,7 @@
 	patches.suse/kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-gcc.patch
 	patches.suse/apparmor-fix-absroot-causing-audited-secids-to-begin.patch
 	patches.suse/apparmor-fix-quiet_denied-for-file-rules.patch
+	patches.suse/apparmor-Fix-failed-mount-permission-check-error-mes.patch
 	patches.suse/pinctrl-nomadik-Fix-refcount-leak-in-nmk_pinctrl_dt_.patch
 	patches.suse/pinctrl-qcom-msm8916-Allow-CAMSS-GP-clocks-to-be-mux.patch
 	patches.suse/pinctrl-amd-Don-t-save-restore-interrupt-status-and-.patch
