clk: qcom: ipq8074: dont disable gcc_sleep_clk_src (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13547,6 +13547,7 @@
 	patches.suse/clk-qcom-ipq8074-SW-workaround-for-UBI32-PLL-lock.patch
 	patches.suse/clk-qcom-ipq8074-fix-NSS-port-frequency-tables.patch
 	patches.suse/clk-qcom-ipq8074-set-BRANCH_HALT_DELAY-flag-for-UBI-.patch
+	patches.suse/clk-qcom-ipq8074-dont-disable-gcc_sleep_clk_src.patch
 	patches.suse/clk-qcom-camcc-sdm845-Fix-topology-around-titan_top-.patch
 	patches.suse/clk-qcom-camcc-sm8250-Fix-topology-around-titan_top-.patch
 	patches.suse/clk-qcom-clk-rcg2-Fail-Duty-Cycle-configuration-if-M.patch
