drm/meson: Fix overflow implicit truncation warnings (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13656,6 +13656,7 @@
 	patches.suse/Input-gscps2-check-return-value-of-ioremap-in-gscps2.patch
 	patches.suse/ARM-dts-uniphier-Fix-USB-interrupts-for-PXs2-SoC.patch
 	patches.suse/arm64-dts-uniphier-Fix-USB-interrupts-for-PXs3-SoC.patch
+	patches.suse/drm-meson-Fix-overflow-implicit-truncation-warnings.patch
 	patches.suse/mtd-maps-Fix-refcount-leak-in-of_flash_probe_versati.patch
 	patches.suse/mtd-maps-Fix-refcount-leak-in-ap_flash_init.patch
 	patches.suse/mtd-sm_ftl-Fix-deadlock-caused-by-cancel_work_sync-i.patch
