mmc: tmio: avoid glitches when resetting (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13586,6 +13586,7 @@
 	patches.suse/mmc-renesas_sdhi-Get-the-reset-handle-early-in-the-p.patch
 	patches.suse/memstick-ms_block-Fix-some-incorrect-memory-allocati.patch
 	patches.suse/memstick-ms_block-Fix-a-memory-leak.patch
+	patches.suse/mmc-tmio-avoid-glitches-when-resetting.patch
 	patches.suse/mmc-sdhci-of-at91-fix-set_uhs_signaling-rewriting-of.patch
 	patches.suse/mmc-block-Add-single-read-for-4k-sector-cards.patch
 	patches.suse/mmc-cavium-octeon-Add-of_node_put-when-breaking-out-.patch
