drm/ttm: Fix dummy res NULL ptr deref bug (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13832,6 +13832,7 @@
 	patches.suse/drm-i915-gt-Skip-TLB-invalidations-once-wedged.patch
 	patches.suse/drm-nouveau-recognise-GA103.patch
 	patches.suse/drm-meson-Fix-refcount-bugs-in-meson_vpu_has_availab.patch
+	patches.suse/drm-ttm-Fix-dummy-res-NULL-ptr-deref-bug.patch
 	patches.suse/drm-sun4i-dsi-Prevent-underflow-when-computing-packe.patch
 	patches.suse/drm-amd-display-Check-correct-bounds-for-stream-enco.patch
 	patches.suse/drm-amdgpu-remove-useless-condition-in-amdgpu_job_st.patch
