net: phy: Don't WARN for PHY_READY state in mdio_bus_phy_resume() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13851,6 +13851,7 @@
 	patches.suse/kbuild-fix-the-modules-order-between-drivers-and-lib.patch
 	patches.suse/i2c-imx-Make-sure-to-unregister-adapter-on-remove.patch
 	patches.suse/audit-fix-potential-double-free-on-error-path-from-f.patch
+	patches.suse/net-phy-Don-t-WARN-for-PHY_READY-state-in-mdio_bus_p.patch
 
 	########################################################
 	# end of sorted patches
