--- a/series.conf
+++ b/series.conf
@@ -13830,6 +13830,7 @@
 	patches.suse/docs-i2c-i2c-sysfs-fix-hyperlinks.patch
 	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
 	patches.suse/drm-i915-gt-Skip-TLB-invalidations-once-wedged.patch
+	patches.suse/drm-nouveau-recognise-GA103.patch
 	patches.suse/drm-meson-Fix-refcount-bugs-in-meson_vpu_has_availab.patch
 	patches.suse/drm-sun4i-dsi-Prevent-underflow-when-computing-packe.patch
 	patches.suse/drm-amd-display-Check-correct-bounds-for-stream-enco.patch
