ratelimit: Fix data-races in ___ratelimit() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13876,6 +13876,7 @@
 	patches.suse/r8152-fix-the-RX-FIFO-settings-when-suspending.patch
 	patches.suse/nfc-pn533-Fix-use-after-free-bugs-caused-by-pn532_cm.patch
 	patches.suse/net-phy-Don-t-WARN-for-PHY_READY-state-in-mdio_bus_p.patch
+	patches.suse/ratelimit-Fix-data-races-in-___ratelimit.patch
 
 	########################################################
 	# end of sorted patches
