pinctrl: intel: Check against matching data instead of ACPI companion (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13545,6 +13545,7 @@
 	patches.suse/platform-chrome-cros_ec-Always-expose-last-resume-re.patch
 	patches.suse/platform-x86-pmc_atom-Match-all-Lex-BayTrail-boards-.patch
 	patches.suse/platform-olpc-Fix-uninitialized-data-in-debugfs-writ.patch
+	patches.suse/pinctrl-intel-Check-against-matching-data-instead-of.patch
 	patches.suse/gpio-gpiolib-of-Fix-refcount-bugs-in-of_mm_gpiochip_.patch
 	patches.suse/clk-mediatek-reset-Fix-written-reset-bit-offset.patch
 	patches.suse/clk-ti-Stop-using-legacy-clkctrl-names-for-omap4-and.patch
