PCI/ACPI: Guard ARM64-specific mcfg_quirks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13587,6 +13587,7 @@
 	patches.suse/PCI-dwc-Always-enable-CDM-check-if-snps-enable-cdm-c.patch
 	patches.suse/dmaengine-dw-edma-Fix-eDMA-Rd-Wr-channels-and-DMA-di.patch
 	patches.suse/phy-samsung-phy-exynos-pcie-sanitize-init-power_on-c.patch
+	patches.suse/PCI-ACPI-Guard-ARM64-specific-mcfg_quirks.patch
 	patches.suse/PCI-microchip-Fix-refcount-leak-in-mc_pcie_init_irq_.patch
 	patches.suse/PCI-qcom-Set-up-rev-2.1.0-PARF_PHY-before-enabling-c.patch
 	patches.suse/PCI-qcom-Power-on-PHY-before-IPQ8074-DBI-register-ac.patch
