ceph: don't leak snap_rwsem in handle_cap_grant (bsc#1202810).

--- a/series.conf
+++ b/series.conf
@@ -56752,6 +56752,7 @@
 	patches.suse/pinctrl-nomadik-Fix-refcount-leak-in-nmk_pinctrl_dt_.patch
 	patches.suse/pinctrl-qcom-msm8916-Allow-CAMSS-GP-clocks-to-be-mux.patch
 	patches.suse/pinctrl-sunxi-Add-I-O-bias-setting-for-H6-R-PIO.patch
+	patches.suse/ceph-don-t-leak-snap_rwsem-in-handle_cap_grant.patch
 	patches.suse/ACPI-property-Return-type-of-acpi_add_nondev_subnode.patch
 	patches.suse/virtio_net-fix-memory-leak-inside-XPD_TX-with-mergea.patch
 	patches.suse/atm-idt77252-fix-use-after-free-bugs-caused-by-tst_t.patch
