tracing/histogram: Fix a potential memory leak for kstrdup() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54757,6 +54757,7 @@
 	patches.suse/s390-module-fix-loading-modules-with-a-lot-of-relocations
 	patches.suse/s390-hypfs-include-z-VM-guests-with-access-control-group-set
 	patches.suse/msft-hv-2513-video-hyperv_fb-Fix-validation-of-screen-resolution.patch
+	patches.suse/tracing-histogram-Fix-a-potential-memory-leak-for-kstrdup.patch
 	patches.suse/tracing-Fix-smatch-warning-for-null-glob-in-event_hist_trigger_parse.patch
 	patches.suse/tracing-Propagate-is_signed-to-expression.patch
 	patches.suse/tracing-Don-t-inc-err_log-entry-count-if-entry-allocation-fails.patch
