blacklist.conf: tracepoint cleanup for drivers/char/random

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1597,3 +1597,4 @@ fbf6c73c5b264c25484fa9f449b5546569fe11f0 # rework, not a bug
 a1326b17ac03a9012cb3d01e434aacb4d67a416c # rework, not a bug
 f1a54ae9af0da4d76239256ed640a93ab3aadac0 # rework, not a bug
 118a4417e14348b2e46f5e467da8444ec4757a45 # cleanup following 90ea1c6436d2 ("random: remove the blocking pool") which was not taken
+14c174633f349cb41ea90c2c0aaddac157012f74 # tracepoints removal cleanup, not a bug
